--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,7 +4,7 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: android
-update_date: Fri, 22 Apr 2022 08:07:48 UTC
+update_date: Fri, 22 Apr 2022 13:07:57 UTC
 stages:
 - id: 1206
   step: 18740
@@ -20,7 +20,7 @@ stages:
   is_completed: true
 - id: 1210
   step: 18744
-  is_completed: false
+  is_completed: true
 - id: 1211
   step: 18745
   is_completed: false
