--- a/Photo Editor/task/build.gradle
+++ b/Photo Editor/task/build.gradle
@@ -33,4 +33,6 @@ dependencies {
 
   def material = hs.android.lib.material
   implementation "com.google.android.material:material:$material"
+
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 }
